# spin-grpc-inbound-test

./: Cargo.toml
crates/wasi-grpc-server/: Cargo.toml
crates/wasi-grpc-server/src/: lib.rs
src/: lib.rs
