[package]
name = "grpc-inbound-test"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
prost = "0.13.5"
wasi-grpc = "0.1.0"
spin-sdk =  "5.0.0"
tonic = { version = "0.13.1", features = ["codegen", "prost", "router"], default-features = false}
wasi-hyperium = "0.3.0"
wasi = "=0.13.1"
# tokio-stream = "0.1.17"
spin-executor = "5.0.0"
futures = "0.3.31"
pin-project = "1.1.10"
async-stream = "0.3.6"

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }

[workspace]
